--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.29",
     "@fortawesome/free-solid-svg-icons": "^5.13.1",
     "@fortawesome/vue-fontawesome": "^0.1.10",
+    "axios": "^0.20.0",
     "bootstrap": "^4.5.0",
+    "bootstrap-vue": "^2.17.3",
     "core-js": "^3.6.5",
     "firebase": "^7.15.5",
     "jquery": "^3.5.1",
